<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.waveshare.wsedr.DeviceController"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="0,1,2,3,4,5,6,7,8"
            android:shrinkColumns="0,1,2,3,,6,7,8"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:weightSum="9"
             >
            <TableRow>
                <TextView
                    android:layout_span="2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/device_display_R"
                    android:id="@+id/LEDR_textView"
                    android:textColor="#ffffff"
                    android:background="#66ccff"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    />
                <SeekBar
                    android:layout_span="6"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/LEDR_seekBar"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:max="255"
                    android:progress="1"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_span="2"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/device_display_G"
                    android:id="@+id/LEDG_textView"
                    android:textColor="#ffffff"
                    android:background="#66ccff"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:layout_marginTop="5dp"
                    />
                <SeekBar
                    android:layout_span="6"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:id="@+id/LEDG_seekBar"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:max="255"
                    android:progress="1"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_span="2"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/device_display_B"
                    android:id="@+id/LEDB_textView"
                    android:textColor="#ffffff"
                    android:background="#66ccff"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:layout_marginTop="5dp"
                    />
                <SeekBar
                    android:layout_span="6"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/LEDB_seekBar"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:max="255"
                    android:progress="1"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_span="6"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/device_display_RGB"
                    android:id="@+id/RGB_LED_textView"
                    android:textColor="#ffffff"
                    android:background="#66ccff"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:layout_marginTop="5dp"
                    />
                <TextView
                    android:layout_span="2"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:id="@+id/RGB_color_textView"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text=""
                    android:textColor="#ffffff"
                    android:background="#FF66CCFF"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:layout_marginTop="5dp"
                    />
            </TableRow>

            <TableRow>
                <TextView
                android:layout_span="8"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/device_display_RTC"
                android:id="@+id/RTC_textView"
                android:textColor="#ffffff"
                android:background="#66ccff"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                />
            </TableRow>
            <TableRow>
                <TextView
                android:layout_span="8"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/device_display_ACC"
                android:id="@+id/ACC_textView"
                android:textColor="#ffffff"
                android:background="#66ccff"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                />
            </TableRow>

            <TableRow>
                <TextView
                android:layout_span="4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/device_display_ADC"
                android:id="@+id/ADC_textView"
                android:textColor="#ffffff"
                android:background="#66ccff"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                />
                <TextView
                android:layout_span="4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/device_display_JOY"
                android:id="@+id/JOY_textView"
                android:textColor="#ffffff"
                android:background="#66ccff"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_span="4"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/device_display_TEMP"
                    android:id="@+id/TEMP_textView"
                    android:textColor="#ffffff"
                    android:background="#66ccff"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    />
                <TextView
                    android:layout_span="4"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/device_display_BUZZER_ON"
                    android:id="@+id/Buzzer_textView"
                    android:textColor="@drawable/textvied_button_selector"
                    android:background="#66ccff"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    />
            </TableRow>

            <TableRow>
                <EditText android:id="@+id/OLED_editText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_span="6"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:inputType="textNoSuggestions"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                        android:layout_span="2"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/send_button"
                        android:id="@+id/Send_textView"
                        android:textColor="@drawable/textvied_button_selector"
                        android:background="#66ccff"
                        android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    />
            </TableRow>


        </TableLayout>
</ScrollView>